@@ -1,7 +1,16 @@
-2008-08-31  Gautier Portet  <kassoulet gmail com
+2008-09-03  Gautier Portet  <kassoulet gmail com>
 
 	* data/soundconverter.glade, src/soundconverter.py:
-	  Applied patch adding optionnal resampling from Francis.
+	  Reverted useless flac quality setting.
+	  Flac files were bigger than necessary because of
+	  some default settings in gstreamer, causing both channels
+	  to be encoded separately. I added the mid-side-stereo=true
+	  option, and bumped encoding quality to max.
+
+2008-08-31  Gautier Portet  <kassoulet gmail com>
+
+	* data/soundconverter.glade, src/soundconverter.py:
+	  Applied patch adding optional resampling from Francis.
 	  Added flac experimental quality setting.
 	   - flac quality do not seems to work with gstreamer ???
            - flac files created by gstreamer are huge...
